Fixed some layout issues

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,3 +1,21 @@
+body {
+    margin-bottom: 15px;
+}
+
 h2 {
     margin-top: 0.5rem;
+}
+
+pre {
+    background-color: #e2e2e2;
+    padding: 5px;
+}
+
+pre.wrapped {
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
